# production-rag

./: .gitignore  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
data/: README.md
docs/: PROJECT-1-PLAN.md
llm_client/: __init__.py  factory.py  parsers.py  protocol.py  schema.py  transport.py
llm_client/providers/: __init__.py  ollama.py
rag/: config.py  temp.md
rag/ingest/: chunk.py  load.py
