[project]
name = "production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "typing>=3.10.0.0",
]
